<resources>
    <string name="folder">Thư mục</string>
    <string name="app_name">My Words</string>
    <string name="library">Library</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="notebook">Notebook</string>
    <string name="game">Game</string>
    <string name="personal_library">Personal library</string>
    <string name="start">Start</string>
    <string name="title_activity_lib">LibActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ooo">ooo</string>
    <string name="ch_i">Chơi</string>
    <string name="dtbc">Đuổi từ bắt chữ</string>
    <string name="_0">0</string>
    <string name="m_t_t_ti_ng_anh_c_6_ch_c_i">Một từ tiếng anh có 6 chữ cái</string>
    <string name="tr_ng_i_h_c_th_ng_long">Trường: Đại Học Thăng Long</string>
    <string name="nguy_n_t_anh">Nguyễn Tú Anh</string>
    <string name="email_tanh_lefthander_gmail_com">Email: tanh.lefthander@gmail.com</string>
    <string name="l_p_tm29e1">Lớp: TM29e1</string>
    <string name="gi_i_thi_u">Giới thiệu</string>
    <string name="b_n_c_10_l_n_o_n_sai_ch_n_ch_c_i_b_n_mu_n_o_n_b_n_d_i">Chọn chữ cái bạn muốn đoán bên dưới</string>
    <string name="g_i">Gợi ý</string>
    <string name="s_n_s_ng">Sẵn sàng</string>
    <string name="nh_p_y">Nhập ở đây</string>
    <string name="th_ng_tin">Thông tin</string>
    <string name="t_n_ng_d_ng_my_words">Tên ứng dụng: My Words</string>
    <string name="t_c_gi_nguy_n_t_anh">Tác giả: Nguyễn Tú Anh</string>
    <string name="th_i_gian_tri_n_khai_14_7_29_7_2017">Thời gian triển khai: 14/7 – 29/7 (2017)</string>
    <string name="n_n_t_ng_android">Nền tảng: Android</string>
    <string name="ng_n_ng_l_p_tr_nh_kotlin_v_java">Ngôn ngữ lập trình: Kotlin và Java</string>
    <string name="l_nh_v_c_t_v_ng_ti_ng_anh">Lĩnh vực: Từ vựng tiếng anh</string>
    <string name="t_nh_n_ng">Tính năng</string>
    <string name="l_u_tr_t_v_ng_v_ghi_ch_c_nh_n_qu_n_l_v_n_t_v_ghi_ch_p_c_nh_n"><![CDATA[-Lưu trữ từ vựng và ghi chú cá nhân -> Quản lý vốn từ và ghi chép cá nhân]]></string>
    <string name="t_ch_h_p_tr_ch_i_d_a_tr_n_v_n_t_v_ng_c_a_ng_i_d_ng_ghi_nh_v_n_t_t_v_ng_c_nh_n"><![CDATA[-Tích hợp trò chơi dựa trên vốn từ vựng của người dùng -> Ghi nhớ vốn từ, từ vựng cá nhân]]></string>
    <string name="b_t_u">Bắt đầu</string>
    <string name="tr_ch_i">Trò chơi</string>
    <string name="ch_c_m_ng_b_n_o_n_ng_h_t_c_c_ch">Chúc mừng bạn đã đoán đúng hết các ô chữ !</string>
    <string name="ngh_a_ti_ng_vi_t">Nghĩa tiếng việt</string>
    <string name="tr_ch_i_k_t_th_c">Trò chơi kết thúc!</string>
    <string name="v_n_m_i">Ván mới</string>
    <string name="ghi_ch_m_i">Ghi chú mới</string>
    <string name="vi_t_ghi_ch_t_i_y">Viết ghi chú tại đây</string>
    <string name="t_v_ng_m_i">Từ vựng mới</string>
    <string name="t_m_i">Từ mới</string>
    <string name="lo_i_t">Loại từ</string>
    <string name="th_m">Thêm</string>
    <string name="th_i">Thôi</string>
    <string name="s_a_ghi_ch">Sửa ghi chú</string>
    <string name="l_u">Lưu</string>
    <string name="xo">Xoá</string>
    <string name="s_a_t">Sửa từ</string>
    <string name="t">Từ</string>
    <string name="word">Word</string>
    <string name="ngh_a">Nghĩa</string>
    <string name="meaning">Meaning</string>
    <string name="ghi_ch">Ghi chú</string>
    <string name="tr_ch_i_l_y_ng_u_nhi_n_m_t_t_v_ng_trong_kho_c_nh_n_c_a_b_n_l_m_p_n">-Trò chơi lấy ngẫu nhiên một từ vựng trong kho cá nhân của bạn để làm đáp án</string>
    <string name="c_c_ch_c_i_c_a_p_n_s_b_n_d_i_c_c_nhi_m_v_c_a_b_n_l_ph_i_ch_n_c_c_ch_c_i_l_m_xu_t_hi_n_h_t_c_c_ch">- Các chữ cái của đáp án sẽ bị ẩn dưới các ô, nhiệm vụ của bạn là phải chọn các chữ cái để làm xuất hiện hết các ô chữ</string>
    <string name="n_u_h_t_10_l_n_o_n_sai_b_n_s_d_ng_cu_c_ch_i">-Nếu hết 10 lần đoán sai bạn sẽ dừng cuộc chơi</string>
    <string name="n_u_s_d_ng_g_i_b_n_b_tr_i_5_i_m">- Nếu sử dụng gợi ý bạn bị trừ đi 5 điểm</string>
    <string name="o_n_h_t_c_c_b_n_c_5_i_m_v_n_ph_n_ch_i_ti_p_theo_l_o_n_ngh_a_c_a_t_o_n_ng_b_n_c_th_m_5_i_m">-Đoán hết các ô bạn được 5 điểm, và đến phần chơi tiếp theo là đoán nghĩa của từ đó, đoán đúng bạn được thêm 5 điểm</string>
    <string name="i_m_cao">Điểm cao</string>
    <string name="number_of_words_100">Number of words: 100</string>
    <string name="correct_characters">Correct Characters:</string>
    <string name="u_i_t_b_t_ch">Đuổi từ - Bắt chữ</string>
    <string name="tr_c_nghi_m_nhanh">Trắc nghiệm nhanh</string>
    <string name="th_vi_n_c_nh_n">Thư viện cá nhân</string>
    <string name="tho_t">Thoát</string>
    <string name="search">Search</string>
    <string name="quit">Quit</string>
    <string name="n">Ẩn</string>
</resources>
