<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_layout"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_layout"
        android:text="@string/nguy_n_t_anh"
        android:textAllCaps="false"
        android:textColor="#111111"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tr_ng_i_h_c_th_ng_long"
        android:textColor="#111111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l_p_tm29e1"
        android:textColor="#111111"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_tanh_lefthander_gmail_com"
        android:textColor="#111111"
        android:textSize="20sp" />

</LinearLayout>