<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_layout"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/s_a_ghi_ch"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="30sp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewInforNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_layoutgame"
        android:padding="10dp"
        android:textColor="#111111"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#111111"
        android:ems="10"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        android:textColor="#fffffe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_layoutgame"
            android:text="@string/l_u"
            android:textAllCaps="false"
            android:textColor="#111111"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_layoutgame"
            android:text="@string/xo"
            android:textAllCaps="false"
            android:textColor="#111111"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_layoutgame"
            android:text="@string/th_i"
            android:textAllCaps="false"
            android:textColor="#111111"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>